objects/Order.object
<CustomObject>
    <fields>
        <fullName>Address_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address Id</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address Id</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Orders (Billing Address Id)</relationshipLabel>
        <relationshipName>Billing_Address_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Profile Id</label>
        <referenceTo>Billing_Profile__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OfferType__c</fullName>
        <label>OfferType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>TEXT(Billing_Profile_Id__r.Payment_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <description>New or Existing User</description>
        <label>UserType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORIGINAL_ORDER.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>SALES.ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>SALES.ACCOUNT.OWNERALIAS</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.END_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.STATUS_CODE</columns>
        <columns>ORDERS.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>ORDERS.LAST_UPDATE</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <language>en_US</language>
    </listViews>
</CustomObject>